@@ -1,24 +1,21 @@
 package com.betacom.car.services.implementations;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 
-import com.betacom.car.dto.filters.MacchinaFilter;
+import com.betacom.car.dto.filters.VeicoloFilter;
 import com.betacom.car.dto.input.MacchinaRequest;
-import com.betacom.car.dto.output.CategoriaDTO;
-import com.betacom.car.dto.output.ColoreDTO;
 import com.betacom.car.dto.output.MacchinaDTO;
-import com.betacom.car.dto.output.MarcaDTO;
-import com.betacom.car.dto.output.TipoAlimentazioneDTO;
-import com.betacom.car.dto.output.TipoVeicoloDTO;
 import com.betacom.car.exceptions.VeicoloException;
 import com.betacom.car.models.Macchina;
+import com.betacom.car.models.Veicolo;
 import com.betacom.car.repositories.IMacchinaRepository;
 import com.betacom.car.services.interfaces.IMacchinaServices;
 import com.betacom.car.services.interfaces.IMessagesServices;
-import com.betacom.car.specifications.MacchinaSpecs;
+import com.betacom.car.specifications.VeicoloSpecs;
 import com.betacom.car.utilities.Utils;
 
 import lombok.RequiredArgsConstructor;
@@ -95,15 +92,16 @@ public class MacchinaImplementation implements IMacchinaServices{
 	}
 
 	@Override
-	public List<MacchinaDTO> filter(MacchinaFilter filter) {
+	public List<MacchinaDTO> filter(VeicoloFilter filter) {
 		
 		//faccio le specification col filter
-		Specification<Macchina> spec = MacchinaSpecs.withFilter(filter);
-
-	    return repM.findAll(spec)
-                .stream()
-                .map(Utils::buildMacchinaDTO)
-                .toList();
+		Specification<Veicolo> spec = VeicoloSpecs.withFilter(filter);
+		
+		List<Veicolo> entities = repM.findAll(spec);
+		
+	    return  entities.stream()
+				.map(e -> Utils.buildMacchinaDTO((Macchina)e))
+				.collect(Collectors.toList());
 	}
 	
 	
